pkgs/artifacts-cli/tests/snapshots/command_tests__two_artifacts_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/2_artifacts
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/2_artifacts/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build: /run/current-system/sw/bin/nix build --impure -I flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/2_artifacts --no-link --print-out-paths --expr '
DEBUG: let
DEBUG:   system = "x86_64-linux";
DEBUG:   filterAttrs =
DEBUG:     pred: set:
DEBUG:     builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));
DEBUG:   flake = builtins.getFlake (toString <flake>);
DEBUG:   pkgs = flake.inputs.nixpkgs.legacyPackages.${system};
DEBUG:   nixosConfigurations = builtins.attrNames (
DEBUG:     filterAttrs (
DEBUG:       machine: configuration: builtins.hasAttr "artifacts" configuration.options
DEBUG:     ) flake.nixosConfigurations
DEBUG:   );
DEBUG:   homeConfigurations =
DEBUG:     let hc = if builtins.hasAttr "homeConfigurations" flake then flake.homeConfigurations else {};
DEBUG:     in builtins.attrNames (
DEBUG:       filterAttrs (
DEBUG:         user: configuration: builtins.hasAttr "artifacts" configuration.options
DEBUG:       ) hc
DEBUG:     );
DEBUG:   nixos = map (name: {
DEBUG:     machine = name;
DEBUG:     artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;
DEBUG:     config =
DEBUG:       if (builtins.hasAttr "config" flake.nixosConfigurations.${name}.config.artifacts) then
DEBUG:         flake.nixosConfigurations.${name}.config.artifacts.config
DEBUG:       else
DEBUG:         { };
DEBUG:   }) nixosConfigurations;
DEBUG:   home = map (name: {
DEBUG:     user = name;
DEBUG:     artifacts = flake.homeConfigurations.${name}.config.artifacts.store;
DEBUG:     config =
DEBUG:       if (builtins.hasAttr "config" flake.homeConfigurations.${name}.config.artifacts) then
DEBUG:         flake.homeConfigurations.${name}.config.artifacts.config
DEBUG:       else
DEBUG:         { };
DEBUG:   }) homeConfigurations;
DEBUG:   make = { inherit nixos home; };
DEBUG: in
DEBUG: pkgs.writeText "test.json" (builtins.toJSON make)
DEBUG: '
DEBUG: make config (pretty):
DEBUG: {
DEBUG:   "home": [],
DEBUG:   "nixos": [
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/pwyaca1xgqx07pggwd6k3mywyc0mgjnd-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/wciybsclyhlydjhk704mxyij7rrx02cw-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-name"
DEBUG:     }
DEBUG:   ]
DEBUG: }
[generate]
DEBUG:     files to produce -> 1 files
DEBUG:       - first-secret => /run/secrets/first-secret owner=root group=root
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-cli/inputs-artifact-one" machine="machine-name" artifact="artifact-one" /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/2_artifacts/test_check.sh
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/artifact-one
DEBUG: bwrap command: 
DEBUG: bwrap \
DEBUG: --unshare-all \
DEBUG: --unshare-user \
DEBUG: --uid 1000 \
DEBUG: --gid 1000 \
DEBUG: --tmpfs / \
DEBUG: --chdir / \
DEBUG: --ro-bind /nix/store /nix/store \
DEBUG: --tmpfs /usr/lib/systemd \
DEBUG: --proc /proc \
DEBUG: --dev /dev \
DEBUG: --bind /tmp/artifacts-cli/prompt-artifact-one /tmp/artifacts-cli/prompt-artifact-one \
DEBUG: --bind /tmp/artifacts-cli/out-artifact-one /tmp/artifacts-cli/out-artifact-one \
DEBUG: --ro-bind /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin \
DEBUG: --ro-bind /bin /bin \
DEBUG: --ro-bind /usr/bin /usr/bin \
DEBUG: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-3029b01ac1f84b21.txt /etc/passwd \
DEBUG: -- /bin/sh /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin/test_generator_one.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-one/first-secret ===
one
=========================
[generate]
DEBUG:     files to produce -> 1 files
DEBUG:       - second-secret => /run/secrets/second-secret owner=root group=root
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-cli/inputs-artifact-two" machine="machine-name" artifact="artifact-two" /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/2_artifacts/test_check.sh
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/artifact-two
DEBUG: bwrap command: 
DEBUG: bwrap \
DEBUG: --unshare-all \
DEBUG: --unshare-user \
DEBUG: --uid 1000 \
DEBUG: --gid 1000 \
DEBUG: --tmpfs / \
DEBUG: --chdir / \
DEBUG: --ro-bind /nix/store /nix/store \
DEBUG: --tmpfs /usr/lib/systemd \
DEBUG: --proc /proc \
DEBUG: --dev /dev \
DEBUG: --bind /tmp/artifacts-cli/prompt-artifact-two /tmp/artifacts-cli/prompt-artifact-two \
DEBUG: --bind /tmp/artifacts-cli/out-artifact-two /tmp/artifacts-cli/out-artifact-two \
DEBUG: --ro-bind /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin \
DEBUG: --ro-bind /bin /bin \
DEBUG: --ro-bind /usr/bin /usr/bin \
DEBUG: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-8e43491af6eee0ab.txt /etc/passwd \
DEBUG: -- /bin/sh /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin/test_generator_two.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-two/second-secret ===
two
=========================

----- stderr -----
