pkgs/artifacts-cli/tests/snapshots/command_tests__wrong_file_type_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/wrong-file-type
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/wrong-file-type/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: "one\ntwo\n"
---
success: false
exit_code: 1
----- stdout -----
DEBUG: Running nix build: /run/current-system/sw/bin/nix build --impure -I flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/wrong-file-type --no-link --print-out-paths --expr '
DEBUG: let
DEBUG:   system = "x86_64-linux";
DEBUG:   filterAttrs =
DEBUG:     pred: set:
DEBUG:     builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));
DEBUG:   flake = builtins.getFlake (toString <flake>);
DEBUG:   pkgs = flake.inputs.nixpkgs.legacyPackages.${system};
DEBUG:   nixosConfigurations = builtins.attrNames (
DEBUG:     filterAttrs (
DEBUG:       machine: configuration: builtins.hasAttr "artifacts" configuration.options
DEBUG:     ) flake.nixosConfigurations
DEBUG:   );
DEBUG:   homeConfigurations =
DEBUG:     let hc = if builtins.hasAttr "homeConfigurations" flake then flake.homeConfigurations else {};
DEBUG:     in builtins.attrNames (
DEBUG:       filterAttrs (
DEBUG:         user: configuration: builtins.hasAttr "artifacts" configuration.options
DEBUG:       ) hc
DEBUG:     );
DEBUG:   nixos = map (name: {
DEBUG:     machine = name;
DEBUG:     artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;
DEBUG:     config =
DEBUG:       if (builtins.hasAttr "config" flake.nixosConfigurations.${name}.config.artifacts) then
DEBUG:         flake.nixosConfigurations.${name}.config.artifacts.config
DEBUG:       else
DEBUG:         { };
DEBUG:   }) nixosConfigurations;
DEBUG:   home = map (name: {
DEBUG:     user = name;
DEBUG:     artifacts = flake.homeConfigurations.${name}.config.artifacts.store;
DEBUG:     config =
DEBUG:       if (builtins.hasAttr "config" flake.homeConfigurations.${name}.config.artifacts) then
DEBUG:         flake.homeConfigurations.${name}.config.artifacts.config
DEBUG:       else
DEBUG:         { };
DEBUG:   }) homeConfigurations;
DEBUG:   make = { inherit nixos home; };
DEBUG: in
DEBUG: pkgs.writeText "test.json" (builtins.toJSON make)
DEBUG: '
DEBUG: make config (pretty):
DEBUG: {
DEBUG:   "home": [],
DEBUG:   "nixos": [
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "test-artifact": {
DEBUG:           "files": {
DEBUG:             "simple-secrets": {
DEBUG:               "group": "deployer",
DEBUG:               "mode": "0400",
DEBUG:               "name": "simple-secrets",
DEBUG:               "owner": "deployer",
DEBUG:               "path": "/run/secrets/simple-secrets"
DEBUG:             },
DEBUG:             "very-simple-secrets": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "very-simple-secrets",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/very-simple-secrets"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/s31b8lrxvdfk360qqr2plwdwm8wz758i-test_generator_wrong_file_type.sh",
DEBUG:           "name": "test-artifact",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "wrong-file-type"
DEBUG:     }
DEBUG:   ]
DEBUG: }
[generate]
DEBUG:     files to produce -> 2 files
DEBUG:       - simple-secrets => /run/secrets/simple-secrets owner=deployer group=deployer
DEBUG:       - very-simple-secrets => /run/secrets/very-simple-secrets owner=root group=root
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-cli/inputs-test-artifact" machine="wrong-file-type" artifact="test-artifact" /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/wrong-file-type/test_check.sh
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ wrong-file-type/test-artifact
DEBUG: bwrap command: 
DEBUG: bwrap \
DEBUG: --unshare-all \
DEBUG: --unshare-user \
DEBUG: --uid 1000 \
DEBUG: --gid 1000 \
DEBUG: --tmpfs / \
DEBUG: --chdir / \
DEBUG: --ro-bind /nix/store /nix/store \
DEBUG: --tmpfs /usr/lib/systemd \
DEBUG: --proc /proc \
DEBUG: --dev /dev \
DEBUG: --bind /tmp/artifacts-cli/prompt-test-artifact /tmp/artifacts-cli/prompt-test-artifact \
DEBUG: --bind /tmp/artifacts-cli/out-test-artifact /tmp/artifacts-cli/out-test-artifact \
DEBUG: --ro-bind /nix/store/6mmk27w5a9gxi6355zb2wbrb3ypgnh5r-test_generator_wrong_file_type.sh/bin /nix/store/6mmk27w5a9gxi6355zb2wbrb3ypgnh5r-test_generator_wrong_file_type.sh/bin \
DEBUG: --ro-bind /bin /bin \
DEBUG: --ro-bind /usr/bin /usr/bin \
DEBUG: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-820e090949e37de7.txt /etc/passwd \
DEBUG: -- /bin/sh /nix/store/6mmk27w5a9gxi6355zb2wbrb3ypgnh5r-test_generator_wrong_file_type.sh/bin/test_generator_wrong_file_type.sh

----- stderr -----
ERROR: generator missing required files for artifact 'test-artifact': [simple-secrets, very-simple-secrets]
